--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.330.0",
     "mongodb": "^6.3.0",
-    "next": "14.0.4",
+    "next": "^14.2.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.3",
